Needs display buffer for ext2Files.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(5806final)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(5806final main.cpp VDIFile.cpp displayBuffers.cpp displayBuffers.cpp.h VDIFile.h uuid2ascii.cpp PartitionFile.h PartitionFile.cpp PartitionEntry.h PartitionEntry.cpp ext2Files.h ext2Files.cpp exceptions.cpp)
+add_executable(5806final main.cpp VDIFile.cpp displayBuffers.cpp displayBuffers.cpp.h VDIFile.h uuid2ascii.cpp PartitionFile.h PartitionFile.cpp PartitionEntry.h PartitionEntry.cpp ext2Files.h ext2Files.cpp exceptions.cpp Inode.h Inode.cpp)
